--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </section>
     
             <!-- виды деятельности -->
-            <section class="section"> 
+            <section class="section section--display"> 
             <div class="container services">
                 <h2 class="services__title">Чем мы занимаемся</h2>
                 <ul class="options">
