портфолио для мобильной версии

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       
         <!-- Навигация -->
       <nav class="nav">
-        <a class="logo link" href="./index.html"><span class="logo__slice">Web</span>Studio</a>
+        <a class="logo logo--indent" href="./index.html"><span class="logo__slice">Web</span>Studio</a>
         <ul class="site-nav list">
           <li class="site-nav__item">
             <a class=" site-nav__link link" href="./index.html">Студия</a>
