--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <address class="address address--flex">
             <ul class="contact-list">
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="mailto:info@devstudio.com"><svg class="contact-list__icon" width="16px"
+                    <a class="contact-list__link " href="mailto:info@devstudio.com"><svg class="contact-list__icon envelope" width="16px"
                             height="12px">
                             <use class="contact-list__svg" href="./images/icons.svg#icon-envelope"></use>
                         </svg>
@@ -45,8 +45,8 @@
                     </a>
                 </li>
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="tel:+380961111111"><svg class="contact-list__icon" width="10px"
-                            height="16px">
+                    <a class="contact-list__link" href="tel:+380961111111"><svg class="contact-list__icon mobile"
+                            >
                             <use class="contact-list__svg" href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
