--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
       <address class="address address--flex">
         <ul class="contact-list">
           <li class="contact-list__item">
-            <a class="contact-list__link link" href="mailto:info@devstudio.com"><svg class="contact-list__icon" width="16px"
+            <a class="contact-list__link link" href="mailto:info@devstudio.com"><svg class="contact-list__icon envelope" width="16px"
                 height="12px">
                 <use class="contact-list__svg" href="./images/icons.svg#icon-envelope"></use>
               </svg>
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li class="contact-list__item">
-            <a class="contact-list__link link" href="tel:+380961111111"><svg class="contact-list__icon" width="10px"
+            <a class="contact-list__link link" href="tel:+380961111111"><svg class="contact-list__icon mobile" width="10px"
                 height="16px">
                 <use class="contact-list__svg" href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -81,7 +81,7 @@
           <li class="member-card__item">
           <a class="member-card__link" href="">
           <div class="member-card__thumb">
-         <img class="member-card__image" src="./images/loptop.jpg" alt="монитор" width="370" height="295">
+         <img class="member-card__image" src="./images/loptop.jpg" alt="монитор" height="295">
         <div class="overlay">
          <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
         шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -96,7 +96,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-           <img class="member-card__image" src="./images/basketboll.jpg" alt="баскетбол" width="370" height="295">
+           <img class="member-card__image" src="./images/basketboll.jpg" alt="баскетбол" height="295">
           <div class="overlay">
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -111,7 +111,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-         <img class="member-card__image" src="./images/seafood.jpg" alt="название seafood" width="370" height="295">
+         <img class="member-card__image" srcset="./images/seafood.jpg 1x, ./images/seafood@2x.jpg 2x" src="./images/seafood.jpg" alt="название seafood"  height="295">
         <div class="overlay">
           <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -126,7 +126,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-            <img class="member-card__image" src="./images/headphones.jpg" alt="" width="370" height="295">
+            <img class="member-card__image" srcset="./images/headphones.jpg 1x, ./images/headphones@2x.jpg 2x" src="./images/headphones.jpg" alt=""  height="295">
           <div class="overlay">
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -141,7 +141,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-              <img class="member-card__img" src="./images/boxes.jpg" alt="коробки" width="370" height="295">
+              <img class="member-card__img" srcset="./images/boxes.jpg 1x, ./images/boxes@2x.jpg 2x" src="./images/boxes.jpg" alt="коробки" height="295">
             <div class="overlay">
               <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -160,7 +160,7 @@
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
           </div>
-          <img class="member-card__image" src="./images/veb_site.jpg" alt="страница сайта" width="370" height="295">
+          <img class="member-card__image"srcset="./images/veb_site.jpg 1x, ./images/veb_site@2x.jpg 2x" src="./images/veb_site.jpg" alt="страница сайта" height="295">
               </div>
         <div class="card-content">
            <h3 class="card-content__title">Inspiration has no Borders</h3>
@@ -171,7 +171,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-            <img class="member-card__image" src="./images/journal.jpg" alt="журнал" width="370" height="295">
+            <img class="member-card__image" srcset="./images/journal.jpg 1x, ./images/journal@2x.jpg 2x" src="./images/journal.jpg" alt="журнал" height="295">
           <div class="overlay">
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -186,7 +186,7 @@
           <li class="member-card__item">
         <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-              <img class="member-card__image" src="./images/label_tag.jpg" alt="бирка label tag" width="370" height="295">
+              <img class="member-card__image" srcset="./images/label_tag.jpg 1x, ./images/label_tag@2x.jpg 2x" src="./images/label_tag.jpg" alt="бирка label tag" height="295">
           <div class="overlay">
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -201,7 +201,7 @@
           <li class="member-card__item"> 
             <a class="member-card__link" href="">
            <div class="member-card__thumb"> 
-              <img class="member-card__image" src="./images/growing_business.jpg" alt="бизнес-приложение" width="370" height="295">
+              <img class="member-card__image" srcset="./images/growing_business.jpg 1x, ./images/growing_business@2x.jpg 2x" src="./images/growing_business.jpg" alt="бизнес-приложение" height="295">
             <div class="overlay">
               <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
