--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <ul class="options">
                     <li class="options__item">
                         <div class="options__thumb">
-                        <img class="options__img" src="./images/it.jpg" alt="технологии" width="370" height="295">
+                        <img class="options__img" srcset="./images/it.jpg 1x, ./images/it@2x.jpg 2x" src="./images/it.jpg" alt="технологии" width="370" height="295">
                     <div class="options__name">
                         <p class="options__text">Десктопные приложения</p>
                     </div>
@@ -132,7 +132,7 @@
                     </li>
                     <li class="options__item">
                         <div class="options__thumb">
-                        <img class="options__img" src="./images/itwork.jpg" alt="компьютеры" width="370" height="295">
+                        <img class="options__img" srcset="./images/itwork.jpg 1x, ./images/itwork@2x.jpg 2x" src="./images/itwork.jpg" alt="компьютеры" width="370" height="295">
                    <div class="options__name">
                        <p class="options__text">Мобильные приложения</p>
                    </div>
@@ -140,7 +140,7 @@
                     </li>
                     <li class="options__item">
                         <div class="options__thumb">
-                        <img class="options__img" src="./images/itcomp.jpg" alt="мониторы" width="370" height="295">
+                        <img class="options__img" srcset="./images/itcomp.jpg 1x, ./images/itcomp@2x.jpg 2x" src="./images/itcomp.jpg" alt="мониторы" width="370" height="295">
                     <div class="options__name">
                         <p class="options__text">Дизайнерские решения</p>
                     </div>
@@ -159,7 +159,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" src="./images/ihor_demianenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <img class="team__img" srcset="./images/ihor_demianenko.jpg 1x, ./images/ihor_demianenko@2x.jpg 2x" src="./images/ihor_demianenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Игорь Демьяненко</h3>
@@ -167,7 +167,7 @@
                         <ul class="social">
                             <li class="social__icon">
                                 <a class="social__link tw" href="">
-                                    <svg class="social__icon" width="20px" height="20px">
+                                    <svg class="social__icon"  width="20px" height="20px">
                                         <use class="social__svg" href="./images/icons.svg#instagram"></use>
                                     </svg>
                                 </a>
@@ -194,7 +194,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" src="./images/olga_repina.jpg" alt="Ольга Репина" width="270" height="260">
+                        <img class="team__img" srcset="./images/olga_repina.jpg 1x, ./images/olga_repina@2x.jpg 2x" src="./images/olga_repina.jpg" alt="Ольга Репина" width="270" height="260">
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Ольга Репина</h3>
@@ -229,7 +229,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
+                        <img class="team__img" srcset="../images/nikolay_tarasov.jpg 1x, ./images/nikolay_tarasov@2x.jpg 2x" src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Николай Тарасов</h3>
@@ -263,7 +263,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" src="./images/mihail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
+                        <img class="team__img" srcset="./images/mihail_ermakov.jpg 1x, ./images/mihail_ermakov@2x.jpg 2x" src="./images/mihail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Михаил Ермаков</h3>
