--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           <li class="member-card__item">
           <a class="member-card__link" href="">
           <div class="member-card__thumb">
-         <img class="member-card__image" src="./images/loptop.jpg" alt="монитор" height="295">
+         <img class="member-card__image" srcset="./images/loptop.jpg 1x, ./images/loptop@2x.jpg 2x" src="./images/loptop.jpg" alt="монитор" height="295">
         <div class="overlay">
          <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
         шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -96,7 +96,7 @@
           <li class="member-card__item">
             <a class="member-card__link" href="">
         <div class="member-card__thumb"> 
-           <img class="member-card__image" src="./images/basketboll.jpg" alt="баскетбол" height="295">
+           <img class="member-card__image"  srcset="./images/basketboll.jpg 1x, ./images/basketboll@2x.jpg 2x" src="./images/basketboll.jpg" alt="баскетбол" height="295">
           <div class="overlay">
             <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
               шпионажа и атак на защищённые сервера конкурентов.</p>
