--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" srcset="./images/ihor_demianenko.jpg 1x, ./images/ihor_demianenko@2x.jpg 2x" src="./images/ihor_demianenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <img class="team__img" srcset="./images/ihor_demianenko.jpg 1x, ./images/ihor_demianenko@2x.jpg 2x" src="./images/ihor_demianenko.jpg" alt="Игорь Демьяненко" >
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Игорь Демьяненко</h3>
