--- a/index.html
+++ b/index.html
@@ -457,10 +457,11 @@
                 <label for="comment" class="comment-field__label">Комментарий</label>
                 <textarea class="comment-field__textarea" name="comment" id="comment" rows="10" placeholder="Введите текст"></textarea>
                 </div>
+
                 <div class="checkbx">
                    
                  <label class="checkbox">
-                    <input class="checkbox__input" type="checkbox" name="policy" id="policy" value="text" checked>
+                    <input class="checkbox__input" type="checkbox" name="policy" id="policy" value="text">
                     <svg class="checkbox__icon checkbox__icon--display" width="16px" height="15px">
                         <use class="checkbox__svg" href="./images/icons.svg#icone-check"></use>
                        
