--- a/index.html
+++ b/index.html
@@ -488,25 +488,28 @@
 
 <!-- меню -->
         <div class="menu-container is-open js-menu-container" id="mobile-menu">
-<button class="menu-toggle js-close-menu" aria-expanded="false" aria-controls="mobile-menu">
-    <svg width="40" height="40" aria-label="переключатель мобильного меню">
-        <use class="menu-button__cross" href="./images/icons.svg#menu-close"></use>
-    </svg>
-</button>
+<div>
+    <button class="menu-toggle js-close-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg width="40" height="40" aria-label="переключатель мобильного меню">
+            <use class="menu-button__cross" href="./images/icons.svg#menu-close"></use>
+        </svg>
+    </button>
+    
+    <ul class="mobile-menu">
+        <li class="mobile-menu__item">
+            <a class=" mobile-menu__link  mobile-menu__link--current" href="./index.html">Студия</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class="mobile-menu__link" href="./portfolio.html">Портфолио</a>
+        </li>
+        <li class="mobile-menu__item">
+            <a class=" mobile-menu__link" href="">Контакты</a>
+        </li>
+    </ul>
+</div>
 
-<ul class="mobile-menu">
-    <li class="mobile-menu__item">
-        <a class=" mobile-menu__link  mobile-menu__link--current" href="./index.html">Студия</a>
-    </li>
-    <li class="mobile-menu__item">
-        <a class="mobile-menu__link" href="./portfolio.html">Портфолио</a>
-    </li>
-    <li class="mobile-menu__item">
-        <a class=" mobile-menu__link" href="">Контакты</a>
-    </li>
-</ul>
-
-<!-- Контакты -->
+<div>
+    <!-- Контакты -->
     <ul class="contact-menu">
         <li class="contact-menu__item">
             <a class="contact-menu__mail " href="mailto:info@devstudio.com">
@@ -519,7 +522,7 @@
             </a>
         </li>
     </ul>
-
+    
     <ul class="mobile-social">
         <li class="mobile-social__item"> <a class="mobile-social__link">Instagram</a></li>
         <li class="mobile-social__item"> <a class="mobile-social__link">Twitter</a></li>
@@ -527,6 +530,7 @@
         <li class="mobile-social__item"> <a class="mobile-social__link">LinkedIn</a></li>
     </ul>
 
+</div>
         </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
