--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <li class="team__item">
                         <article class="team__card">
                         <div class="team__thumb">
-                        <img class="team__img" srcset="../images/nikolay_tarasov.jpg 1x, ./images/nikolay_tarasov@2x.jpg 2x" src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
+                        <img class="team__img" srcset="./images/nikolay_tarasov.jpg 1x, ./images/nikolay_tarasov@2x.jpg 2x" src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
                         </div>
                         <div class="team__content">
                         <h3 class="team__employee">Николай Тарасов</h3>
