--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
       <footer class="footer">
         <div class="container footer__flex">
           <div class="footer__one-section">
-            <a class="logo logo--color link" href="index.html"><span class="logo__slice">Web</span>Studio</a>
+            <a class="logo logo--black" href="index.html"><span class="logo__slice">Web</span>Studio</a>
           <address class="address">
           
             <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
